starlark_syntax/src/syntax/def_tests/star_cannot_be_last.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark_syntax --lib
# ```

Program:
def test(x, *): pass

Error: error: `*` parameter must not be last
 --> test.star:1:13
  |
1 | def test(x, *): pass
  |             ^
  |
